@@ -6,6 +6,7 @@ wiwordik 0.XX 2011-0?-??
 Split to common_wiki and common_wiki_jdbc
   common_wiki 237 tests passed, 6 tests failed
   common_wiki_jdbc 88 tests passed, 10 tests failed
+  common_wiki_jdbc 58 tests passed, 38 tests failed (wo wikt_parsed)
 
   common_wiki 231 tests passed, 6 tests failed
   common_wiki_jdbc 88 tests passed, 10 tests failed
